--- a/Front.html
+++ b/Front.html
@@ -11,8 +11,16 @@
     }
   </style>
 </head>
-<body>
-<header>
-  <h1 class="Title">Front Page</h1>
-</header>
+<body id="Start">
+  <div id="Top">
+  <header>
+    <h1 class="Title">Front Page</h1>
+    <a href="#container">See all Files</a>
+  </header>
+  </div>
+  <div id="container">
+    <div id="Folder box" class="Folder">
+    </div>
+    
+  </div>
 </body></html>
