--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </svg>
   <script>
     var path = document.createElement('path');
+    path.id = "path";
     path.d = "M";
     let pos = {x:10,y:10,length:1};
     let preCalc = {top:{dx:pos.length*Math.cos(Math.PI*72/180),dy:pos.length*Math.sin(Math.PI*72/180)},btm:{dx:pos.length*Math.cos(Math.PI*54/180),dy:-pos.length*Math.sin(Math.PI*54/180)}};
