--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>NaAlOH4</title>
-  <link href="style.css" onload="this.onload = null;this.rel='stylesheets'">
+  <link href="style.css" rel="stylesheets" onload="this.onload = null;this.rel='stylesheets'">
 </head>
 <body id="Start">
   <svg id="shape" width="500" height="500">
