--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     //Starting from the top right corner
     let vertex = {0:{x:pos.x-preCalc.top.dx,y:pos.y+preCalc.top.dy},1:{x:pos.x,y:pos.y-pos.length},2:{x:pos.x+preCalc.top.dx,y:pos.y+preCalc.top.dy},
                     3:{x:pos.x-preCalc.btm.dx,y:pos.y+preCalc.btm.dy},4:{x:pos.x+preCalc.btm.dx,y:pos.y+preCalc.btm.dy}}
-    for(let i in vertex){path.d = path.d+" q"+i.x+" "+i.y;}
+    for(let i in vertex){path.d = path.d+" q"+pos.x+" "+pos.y+" "+i.x+" "+i.y;}
     document.getElementById('shape').appendChild(path);
   </script>
   <div id="Top">
