--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     path.d = "M"+pos.x+" "+pos.y;
     let preCalc = {top:{dx:pos.length*Math.cos(Math.PI*72/180),dy:pos.length*Math.sin(Math.PI*72/180)},btm:{dx:pos.length*Math.cos(Math.PI*54/180),dy:-pos.length*Math.sin(Math.PI*54/180)}};
     //Starting from the top right corner
-    let vertex = {0:{x:pos.x-preCalc.top.dx,y:pos.y+preCalc.top.dy},1:{x:pos.x,y:pos.y-pos.length},2:{x:pos.x+preCalc.top.dx,y:pos.y+preCalc.top.dy},
-                    3:{x:pos.x-preCalc.btm.dx,y:pos.y+preCalc.btm.dy},4:{x:pos.x+preCalc.btm.dx,y:pos.y+preCalc.btm.dy}}
+    let vertex = [{x:pos.x-preCalc.top.dx,y:pos.y+preCalc.top.dy},{x:pos.x,y:pos.y-pos.length},{x:pos.x+preCalc.top.dx,y:pos.y+preCalc.top.dy},
+                    {x:pos.x-preCalc.btm.dx,y:pos.y+preCalc.btm.dy},{x:pos.x+preCalc.btm.dx,y:pos.y+preCalc.btm.dy}]
     for(let i of vertex){path.d = path.d+" q"+pos.x+" "+pos.y+" "+i.x+" "+i.y;}
     document.getElementById('shape').appendChild(path);
   </script>
