--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div id="Top">
   <header>
     <h1 class="Title">Front Page</h1>
-    <a href="#container">See all Files</a>
+    <a href="#container" style="color:#37f1f1">See all Files</a>
   </header>
   </div>
   <div class="Box-container">
