--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
     path.setAttribute('d',"M"+pos.x+" "+(pos.y+pos.length));
     let preCalc = {top:{dx:pos.length*Math.cos(Math.PI*72/180),dy:pos.length*Math.sin(Math.PI*72/180)},btm:{dx:pos.length*Math.cos(Math.PI*54/180),dy:-pos.length*Math.sin(Math.PI*54/180)}};
     //Starting from the top right corner
-    let vertex = [{x:pos.x,y:pos.y+pos.length},{x:pos.x-preCalc.top.dx,y:pos.y+preCalc.top.dy},{x:pos.x,y:pos.y-pos.length},{x:pos.x+preCalc.top.dx,y:pos.y+preCalc.top.dy},
+    let vertex = [{x:pos.x,y:pos.y+pos.length},{x:pos.x+preCalc.top.dx,y:pos.y-preCalc.top.dy},{x:pos.x+preCalc.top.dx,y:pos.y+preCalc.top.dy},
                   {x:pos.x-preCalc.btm.dx,y:pos.y+preCalc.btm.dy},{x:pos.x+preCalc.btm.dx,y:pos.y+preCalc.btm.dy},
                   {x:pos.x-preCalc.top.dx,y:pos.y+preCalc.top.dy},{x:pos.x,y:pos.y+pos.length}]
-    for(let i = 1; i < vertex.length; i++){path.setAttribute('d',path.getAttribute('d')+" q"+(pos.x-vertex[i-1])+" "+(pos.y-vertex[i-1])+" "+(vertex[i].x-pos.x)+" "+(vertex[i].y-pos.y));}
+    for(let i = 1; i < vertex.length; i++){path.setAttribute('d',path.getAttribute('d')+" q"+JSON.stringify(pos.x-vertex[i-1])+" "+JSON.stringify(pos.y-vertex[i-1])+" "+JSON.stringify(vertex[i].x-pos.x)+" "+JSON.stringify(vertex[i].y-pos.y));}
     document.getElementById('shape').appendChild(path);
   </script>
   <div id="Top">
