--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     var path = document.createElement('path');
     path.id = "path";
     path.setAttribute('fill', "#3AF");
-    path.setAttribute('stroke', "#393939")
+    path.setAttribute('stroke', "#393939");
+    path.setAttribute('stroke-weight', "3")
     let pos = {x:100,y:100,length:10};
     path.setAttribute('d',"M"+pos.x+" "+(pos.y+pos.length));
     let preCalc = {top:{dx:pos.length*Math.cos(Math.PI*72/180),dy:pos.length*Math.sin(Math.PI*72/180)},btm:{dx:pos.length*Math.cos(Math.PI*54/180),dy:-pos.length*Math.sin(Math.PI*54/180)}};
