--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       path.setAttribute('d',path.getAttribute('d')+" q"+JSON.stringify(pos.x-vertex[i-1].x)+" "+JSON.stringify(pos.y-vertex[i-1].y)+" "+JSON.stringify(vertex[i].x-pos.x)+" "+JSON.stringify(vertex[i].y-pos.y));
     }
     document.getElementById('shape').appendChild(path);
+    path.style = "display:block";
   </script>
   <div id="Top">
   <header>
