--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
       <circle id="point4" cx="41.22" cy="180.9" r="3" />
       <circle id="point5" cx="4.89" cy="69.1" r="3" />
     </g>
+    <g font-size="30" font-family="sans-serif" fill="black" stroke="none"
+  text-anchor="middle">
+      <text x="100" y="100" dx="-30">0</text>
+      <text x="100" y="200" dy="-10">1</text>
+      <text x="195.1" y="69.1" dx="30">2</text>
+      <text x="158.8" y="180.9" dx="-30">3</text>
+      <text x="41.22" y="180.9" dy="-10">4</text>
+      <text x="4.89" y="350" dx="69.1">5</text>
+    </g>
   </svg>
   
   <script>
