--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
     </g>
     <g font-size="30" font-family="sans-serif" fill="black" stroke="none"
   text-anchor="middle">
-      <text x="200" y="200" dx="-30">0</text>
+      <text x="200" y="200" dy="-10">0</text>
       <text x="200" y="100" dy="-10">1</text>
-      <text x="295.1" y="169.1" dx="30">2</text>
-      <text x="258.8" y="280.9" dx="-30">3</text>
+      <text x="295.1" y="169.1" dx="20">2</text>
+      <text x="258.8" y="280.9" dy="-10">3</text>
       <text x="141.22" y="280.9" dy="-10">4</text>
-      <text x="104.89" y="169.1" dx="30">5</text>
+      <text x="104.89" y="169.1" dx="-20">5</text>
     </g>
   </svg>
   
