--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body id="Start">
   <svg id="shape" width="500" height="500">
-    <path stroke=“black” stroke-weight=“3” d=“M100 200 Q 0 -100 95.1 69.1 Q -95.1 30.9 -36.3 111.8 q -58.8 -80.9 117.58 0 q 58.78 -80.9 -36.33 -111.8 q 95.11 30.9 95.11 -69.1 />
+    <path stroke="black" stroke-weight="3" d="M100 200 Q 0 -100 95.1 69.1 Q -95.1 30.9 -36.3 111.8 q -58.8 -80.9 117.58 0 q 58.78 -80.9 -36.33 -111.8 q 95.11 30.9 95.11 -69.1 />
     <g stroke="black" stroke-width="3" fill="black">
       <circle id="point0" cx="200" cy="200" r="3" />
       <circle id="point1" cx="200" cy="100" r="3" />
