--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
       path.setAttribute('d',path.getAttribute('d')+" q"+JSON.stringify(pos.x-vertex[i-1].x)+" "+JSON.stringify(pos.y-vertex[i-1].y)+" "+JSON.stringify(vertex[i].x-pos.x)+" "+JSON.stringify(vertex[i].y-pos.y));
     }
     document.getElementById('shape').appendChild(path);
-    document.getElementById(“shape”).setAttribute(“style”,”display:none”);
-    document.getElementById(“shape”).setAttribute(“style”,”display:block”);
+    document.getElementById("shape").setAttribute("style","display:none");
+    document.getElementById("shape").setAttribute("style","display:block");
   </script>
   <script src="FolderManager.js"></script>
 </body></html>
