--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
   	}
     var path = document.createElementNS('http://www.w3.org/2000/svg','path');
     path.id = "path";
-    path.setAttribute('fill', "#3AF");
+    path.setAttribute('fill', "#f77c5f");
     path.setAttribute('stroke', "#393939");
     path.setAttribute('stroke-weight', "3")
-    let pos = {x:100,y:100,length:50};
+    let pos = {x:50,y:50,length:50};
     path.setAttribute('d',"M"+pos.x+" "+(pos.y-pos.length));
     let preCalc = {top:{dx:pos.length*Math.cos(Math.PI*18/180),dy:pos.length*Math.sin(Math.PI*18/180)},btm:{dx:pos.length*Math.cos(Math.PI*54/180),dy:-pos.length*Math.sin(Math.PI*54/180)}};
     //Starting from the top right corner
