--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css" onload="this.onload = null;this.rel='stylesheet'">
 </head>
 <body id="Start">
-  <svg id="shape" width="200" height="200">
+  <svg id="shape">
   </svg>
   
   
