--- a/index.html
+++ b/index.html
@@ -6,10 +6,6 @@
   <link rel="stylesheet" type="text/css" href="style.css" onload="this.onload = null;this.rel='stylesheet'">
 </head>
 <body id="Start">
-  <svg id="shape" width="100" height="50" style="position:absolute">
-  </svg>
-  
-  
   <div id="Top">
   <header>
     <h1 class="Title">Front Page</h1>
@@ -23,7 +19,10 @@
   <div id="F-box" class="F-box">
   	<div class="grid-container">
 	  <div class="Frow">
-	    <div id="Fc-0-0" class="Fcell"></div>
+	    <div id="Fc-0-0" class="Fcell">
+	      <svg id="shape" style="position:absolute">
+  	      </svg>
+	    </div>
 	    <div id="Fc-1-0" class="Fcell"></div>
 	    <div id="Fc-2-0" class="Fcell"></div>
 	    <div id="Fc-3-0" class="Fcell"></div>
