--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   	<div class="grid-container">
 	  <div class="Frow">
 	    <div id="Fc-0-0" class="Fcell">
-	      <svg id="shape" width="50" height="50" style="margin: 25px;position:absolute">
+	      <svg id="shape" width="50" height="50" style="margin: auto;position:absolute">
   	      </svg>
 	    </div>
 	    <div id="Fc-1-0" class="Fcell"></div>
