--- a/Sparkler, Firework/Sparks.html
+++ b/Sparkler, Firework/Sparks.html
@@ -14,8 +14,8 @@
   <h1 id="header" class="Title">Sparkler animation</h1>
   <canvas id="Animation" onclick="canvaSparkle()"></canvas>
   <p>I will probably go on to expand to make electricity with this spark object or something</p>
-  <script src="Spark.js">
-  <script src="Firework.js">
+  <script src="Spark.js" />
+  <script src="Firework.js" />
   <script>
     function range(no) {
       var arr = [];
