--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -18,6 +18,7 @@
 </head>
 <body>
   <canvas id="box"></canvas>
+  <script src="PhysicsEngine.js"></script>
   <script>
     var growthRate = 1, spawnRate = 5;
     var canvas = document.getElementById("box");
