--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -280,8 +280,7 @@
       ctx.fillText("2020", canvas.width/2, canvas.height/2+125)
       for(let x = 0; x < canvas.width; x++) {
         for(let y = 0; y < canvas.height; y++) {
-          var index = x + y * canvas.width;
-          var c = ctx.getImageData(x,y,1,1);
+          var c = ctx.getImageData(x,y,1,1).data;
           var b = brightness(c);
           if(b > 1) {
             spots.push(new Vector(x,y))
@@ -304,7 +303,7 @@
       for(let i = 0; i < spawnRate; i++) {
         spawnTries += qt.newCircle();
       }
-      if(spawnTries > 20000) {
+      if(spawnTries > 10500) {
       	clearInterval(drawing);
       }
       // ctx.drawImage(img,0,0);
