--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -191,7 +191,7 @@
 //             break;
 //         }
         var valid = true;
-        let temp = new Circle(x,y);
+        let temp = new Circle(spot.x,spot.y);
         // temp.color = color;
         let points = [];
         this.query(temp,points);
