--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -272,7 +272,7 @@
     }
 
     function setup() {
-      createCanvas(canvas, window.outerWidth, window.innerHeight);
+      createCanvas(canvas, window.outerWidth, window.outerHeight);
 	    
       background(0,0,0)
       ctx.fillStyle = "rgb(255,255,255)"
