--- a/CirclePacking/index.html
+++ b/CirclePacking/index.html
@@ -280,7 +280,7 @@
       ctx.fillStyle = "rgb(255,255,255)"
       ctx.font = "400px Allura"
       ctx.textAlign = "center";
-      ctx.fillText("2020", canvas.width/2, canvas.height/2+125);
+      ctx.fillText("Amos", canvas.width/2, canvas.height/2+125);
 			if(localStorage.getItem("AmosImg") != null)  {
 			  spots = JSON.parse(localStorage.getItem("AmosImg"));
 			}else {
